After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 626710 - GailScaleButton calculates wrong value for minimum increment
GailScaleButton calculates wrong value for minimum increment
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Accessibility
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2010-08-12 07:35 UTC by Szilárd Pfeiffer
Modified: 2010-08-30 20:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
use adjustment in the function of value interface (9.61 KB, patch)
2010-08-12 07:35 UTC, Szilárd Pfeiffer
accepted-commit_now Details | Review
use adjustment in the function of value interface (9.93 KB, patch)
2010-08-30 20:26 UTC, Szilárd Pfeiffer
committed Details | Review

Description Szilárd Pfeiffer 2010-08-12 07:35:42 UTC
Created attachment 167694 [details] [review]
use adjustment in the function of value interface

It discounts the value of page increment.
Comment 1 Matthias Clasen 2010-08-13 03:42:56 UTC
Review of attachment 167694 [details] [review]:

Looks reasonable to me.
Comment 2 Javier Jardón (IRC: jjardon) 2010-08-29 17:26:23 UTC
Comment on attachment 167694 [details] [review]
use adjustment in the function of value interface

Szilárd: Could you update the patch against current master?
Also, It would be great if you use the git format (with format-patch)

Thanks
Comment 3 Szilárd Pfeiffer 2010-08-30 20:26:44 UTC
Created attachment 169125 [details] [review]
use adjustment in the function of value interface
Comment 4 Javier Jardón (IRC: jjardon) 2010-08-30 20:44:19 UTC
Comment on attachment 169125 [details] [review]
use adjustment in the function of value interface

commit d8a90be3706cb2bb65ddf36d07048ac14529548f
Comment 5 Javier Jardón (IRC: jjardon) 2010-08-30 20:44:53 UTC
Thanks Szilárd, this problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.